# mediumcoeli

./: .gitignore  AGENTS.md  Brewfile  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  crates-io-publish.yml  docker-release.yml  ghcr-cleanup.yml  macos-release.yml  release.yml  windows-release.yml
crates/astrogram/: Cargo.toml  README.md
crates/astrogram/docs/: astrogram.md
crates/astrogram/src/: aaf.rs  adbxml.rs  astro.rs  astrocom.rs  astrotheoros.rs  auth.rs  capability.rs  chart.rs  consolidate.rs  convert.rs  cookie_import.rs  decision_log.rs  error.rs  format.rs  jhd.rs  jzod.rs  lib.rs  luna.rs  normalize.rs  pipeline.rs  provider.rs  raw.rs  sfcht.rs  test_support.rs  transcript.rs  user_agent.rs  util.rs  web_auth.rs  zeus.rs
crates/astrogram/tests/: aaf.rs  adbxml.rs  astro.rs  astrocom.rs  astrotheoros.rs  chart.rs  consolidate.rs  decision_log.rs  jhd_specimens.rs  luna.rs  normalize.rs  roundtrip.rs  sfcht_header.rs  sfcht_header_acceptance.rs  sfcht_records_golden.rs  sfcht_writer.rs  util.rs  web_integration.rs  zeus.rs  zeus_writer.rs
crates/blackmoon/: Cargo.toml  README.md
crates/blackmoon/docs/: pericynthion.md  starcat.md
crates/blackmoon/src/: consolidate_ui.rs  exit.rs  main.rs  path.rs  providers.rs
crates/blackmoon/tests/: dir_source.rs  exit_codes.rs  quiet.rs  streams.rs
crates/jzod/: Cargo.toml  JZOD.md  README.md  anna_freud_radix.json
crates/jzod/schema/: jzod-0.0.0.schema.json
crates/jzod/src/: ayanamsha.rs  chart.rs  coord.rs  document.rs  house.rs  lib.rs  placement.rs  time.rs  uid.rs
crates/jzod/tests/: schema.rs
crates/pericynthion/: Cargo.toml  README.md  build.rs
crates/pericynthion/src/: antiscia.rs  body.rs  bsc5_catalogue.rs  capability.rs  chart.rs  chebyshev.rs  datafetch.rs  datafiles.rs  draconic.rs  ephemeris.rs  error.rs  geo.rs  horizons.rs  jzod.rs  lib.rs  lots.rs  manifest.rs  placements.rs  provenance.rs  sidereal.rs  stars.rs
crates/pericynthion/src/coords/: aberration.rs  acds.rs  apparent.rs  light_time.rs  lilith.rs  mcic.rs  mod.rs  nodes.rs  nutation.rs  obliquity.rs  phase.rs  precession.rs  sidereal_time.rs  tithi.rs  topocentric.rs  transform.rs  vxax.rs
crates/pericynthion/src/houses/: alcabitius.rs  campanus.rs  carter.rs  equal.rs  equal_mc.rs  horizontal.rs  koch.rs  krusinski.rs  meridian.rs  mod.rs  morinus.rs  placidus.rs  porphyry.rs  pullen_sd.rs  pullen_sr.rs  regiomontanus.rs  sripati.rs  topocentric.rs  vehlow.rs  whole_sign.rs
crates/pericynthion/src/jpl/: ascii.rs  discover.rs  header.rs  mod.rs  oracle.json  oracle.rs  oracle_data.rs  reader.rs
crates/pericynthion/src/se1/: decompress.rs  header.rs  mod.rs
crates/pericynthion/src/spk/: body.rs  daf.rs  mod.rs  type2.rs  type21.rs
crates/pericynthion/src/time/: calendar.rs  delta_t.rs  mod.rs  zone.rs
crates/pericynthion/tests/: acceptance_fetched_body.rs  acceptance_horizons.rs  acceptance_refchart.rs  acceptance_type21.rs  ascii_vs_binary_de441.rs  binary_de441.rs  compute_chart.rs  compute_provenance.rs  ephemeris_de441.rs  fixed_stars_drift.rs  header_de441.rs  helio_topo_de441.rs  oracle_mirror.rs  placements_doc.rs  retrograde.rs  se1_chiron.rs  spk_apparent.rs  spk_horizons.rs  time_parse.rs
crates/pericynthion/tests/fixtures/: horizons_adele_haenel_geo.json  horizons_adele_haenel_helio.json  horizons_adele_haenel_topo.json  horizons_anna_freud_geo.json  horizons_anna_freud_helio.json  horizons_anna_freud_topo.json  horizons_asteroids_j2000_geo.json  horizons_lightning_strike_geo.json  horizons_lightning_strike_helio.json  horizons_lightning_strike_topo.json  horizons_unix_overflow_2038_geo.json  horizons_unix_overflow_2038_helio.json  horizons_unix_overflow_2038_topo.json  horizons_vettius_valens_geo.json  horizons_vettius_valens_helio.json  horizons_vettius_valens_topo.json  horizons_william_lilly_geo.json  horizons_william_lilly_helio.json  horizons_william_lilly_topo.json
crates/starcat/: Cargo.toml  README.md
crates/starcat/docs/: blackmoon.md
crates/starcat/src/: exit.rs  main.rs
crates/starcat/tests/: cli_compute.rs  exit_codes.rs  streams.rs
crates/starcat/tests/common/: mod.rs
crates/wristband/: Cargo.toml  README.md  SECURITY.md
crates/wristband/src/: cookie.rs  discover.rs  domain.rs  error.rs  firefox.rs  gate.rs  lib.rs  safari.rs  sqlite_copy.rs  user_agent.rs
crates/wristband/src/chromium/: decrypt_linux.rs  decrypt_macos.rs  decrypt_windows.rs  framing.rs  mod.rs
crates/wristband/tests/: conformance.rs
docs/: astrogram.md  blackmoon.md  jpl.md  pericynthion.md  placements.md  starcat.md  tests.md
scripts/: Dockerfile.blackmoon  Dockerfile.starcat  docker.just  extract_oracle_manifest.py  gen_oracle.py  gen_sfcht_fixtures.py  horizons_fetch.py  oracle_manifest.tsv  promote_placements.py
skills/astrologer/: HOUSES.md  SKILL.md  houses.md  starcat.md
skills/astrologer/fixtures/: ref_adele_haenel_whole.md  ref_alan_turing_koch.md  ref_anna_freud_alcabitius.md  ref_charts.md  ref_first_contact_morinus.md  ref_lightning_strike_placidus.md  ref_roberta_bondar_moonrise.md  ref_synthetics.md  ref_unix_overflow_helio.md  ref_vettius_valens_porphyry.md  ref_william_lilly_regiomontanus.md
