[workspace]
resolver = "3"
members = ["crates/pericynthion", "crates/starcat", "crates/astrogram", "crates/blackmoon", "crates/jzod", "crates/wristband"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "CC0-1.0"
authors = ["lucidaeon <lucidaeon@users.noreply.github.com>"]
repository = "https://github.com/lucidaeon/mediumcoeli"
homepage = "https://github.com/lucidaeon/mediumcoeli"
readme = "README.md"

[workspace.dependencies]
# Internal
pericynthion = { path = "crates/pericynthion", version = "0.8.0" }
astrogram = { path = "crates/astrogram", version = "0.4.0" }
jzod = { path = "crates/jzod", version = "0.5.1" }
wristband = { path = "crates/wristband", version = "0.1.0" }

# Errors
thiserror = "2"
anyhow = "1"

# Hashing
blake3 = "1"

# I/O
memmap2 = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tabled = { version = "0.21", default-features = false, features = ["std", "macros"] }

# Serialization (optional in lib, default in bin)
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
uuid = { version = "1", features = ["v4"] }

# Encoding
encoding_rs = "0.8"
base64 = "0.22"

# XML / HTML parsing
roxmltree = "0.21"
scraper = "0.22"

# HTTP. Used by astrogram (web chart formats) and, feature-gated, by
# pericynthion's `horizons` SPK fetcher. rustls-tls keeps the stack pure-Rust.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls"] }

# Dev / test
approx = "0.5"
proptest = "1"
insta = { version = "1", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
