[package]
name = "blackmoon"
version = "0.1.3"
description = "Command-line astrology data-format converter built on astrogram."
keywords = ["astrology", "chart", "natal", "sfcht"]
categories = ["command-line-utilities", "data-structures", "encoding"]
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "blackmoon"
path = "src/main.rs"

[dependencies]
astrogram.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde_json.workspace = true
