[package]
name = "blackmoon"
version = "0.4.1"
description = "Astrology software liberty and mobility: Command-line astrology data-format converter built on astrogram"
keywords = ["astrology", "chart", "natal", "sfcht"]
categories = ["command-line-utilities", "encoding"]
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
# Allowlist of files to publish (tests/ and dev artifacts excluded). Cargo
# always also packs Cargo.toml and the README.
include = ["src/**", "README.md"]

[[bin]]
name = "blackmoon"
path = "src/main.rs"

[dependencies]
astrogram = { workspace = true, features = ["cookie-import"] }
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempdir = "0.3"
