[package]
name = "jzod"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JZOD v0.0.0 typed model — open astrology chart interchange format"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
jsonschema = "0.20"
