[package]
name = "jzod"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed model for the JZOD open astrology chart interchange format"
categories = ["data-structures", "encoding"]
# Allowlist of files to publish: src + the JSON Schema (the format's spec
# artifact). The example chart (anna_freud_radix.json) and tests/ stay dev-only.
# Cargo always also packs Cargo.toml and the README.
include = ["src/**", "README.md", "schema/**"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
jsonschema = "0.20"
