[package]
name = "pericynthion"
version = "0.4.0"
description = "Astrological ephemeris computation library — pure-Rust NASA JPL DE441 reader"
keywords = ["astrology", "chart", "de441", "ephemeris", "natal"]
categories = ["algorithms", "date-and-time", "mathematics", "science"]
edition.workspace = true
rust-version.workspace = true
license = "CC0-1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
# Allowlist of files to publish. New files never leak by accident; tests/
# (incl. the large horizons golden fixtures) and dev artifacts are excluded.
# Cargo always also packs Cargo.toml and the README.
include = ["src/**", "README.md"]

[lib]
name = "pericynthion"

[features]
default = []
serde = ["dep:serde"]
# Unverified house systems (Koch, Campanus, Meridian, Equal-from-MC,
# Horizontal, Topocentric/Polich-Page, Krusinski-Pisa-Goeldi, Sripati,
# Vehlow Equal, Carter Poli-Equatorial, Pullen SD, Pullen SR).
# Compiled and tested only under this flag. Each system graduates out of the
# gate when refchart oracle data is captured (Alcabitius, Morinus promoted).
noref-houses = []
# JZOD chart export: maps ComputedChart → jzod::Chart. Optional so that
# the numeric core can be compiled without the serialization dependency.
jzod = ["dep:jzod"]

[dependencies]
thiserror.workspace = true
memmap2.workspace = true
serde = { workspace = true, optional = true }
jzod = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempdir = "0.3"
